--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,5 +22,9 @@ jobs: # actoion이 시작될 경우 진행될 과정
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: pylint
+        run: |
+          pylint src
+          pylint tests
       - name: Run tests with pytest
         run: pytest tests
