--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs: # actoion이 시작될 경우 진행될 과정
           pip install -r requirements.txt
       - name: pylint
         run: |
-          PYTHONPATH=src pylint src
-          PYTHONPATH=src pylint tests
+          PYTHONPATH=src pylint src --disable=C,R,W
+          PYTHONPATH=src pylint tests --disable=C,R,W
       - name: Run tests with pytest
         run: PYTHONPATH=src pytest tests
